--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,8 @@ spring.h2.console.path=/consoleDB
 
 spring.jpa.defer-datasource-initialization=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-guide
+
 
 
